Capitulo_8_Classes_e_objetos_um_exame_mais_profundo/Figura_8_1_Time1_java/MemberAccessTest_CMD.txt

Exception hour, minute and/or second was out of range

After calling setTime with invalid values
Universal time: 13:27:06
Standard time: 1:27:06 PM

D:\Google Drive\exercicios_java_como_programar>javac  Capitulo_8_Classes_e_objetos_um_exame_mais_profundo/Figura_8_1_Time1_java/*.java
Capitulo_8_Classes_e_objetos_um_exame_mais_profundo\Figura_8_1_Time1_java\MemberAccessTest.java:12: error: hour has private access in Time1
        time.hour = 7; // erro: hour tem acesso privado em Time1
            ^
Capitulo_8_Classes_e_objetos_um_exame_mais_profundo\Figura_8_1_Time1_java\MemberAccessTest.java:13: error: minute has private access in Time1
        time.minute = 15; // erro: minute tem acesso privado em Time1ÿÿ
            ^
Capitulo_8_Classes_e_objetos_um_exame_mais_profundo\Figura_8_1_Time1_java\MemberAccessTest.java:14: error: second has private access in Time1
        time.second = 30; // erro: second tem acesso privado em Time1
            ^
3 errors




D:\Google Drive\exercicios_java_como_programar>javac  Capitulo_8_Classes_e_objetos_um_exame_mais_profundo/Figura_8_1_Time1_java/*.java
Capitulo_8_Classes_e_objetos_um_exame_mais_profundo\Figura_8_1_Time1_java\MemberAccessTest.java:12: error: hour has private access in Time1
        time.hour = 7; // erro: hour tem acesso privado em Time1
            ^
Capitulo_8_Classes_e_objetos_um_exame_mais_profundo\Figura_8_1_Time1_java\MemberAccessTest.java:13: error: minute has private access in Time1
        time.minute = 15; // erro: minute tem acesso privado em Time1
            ^
Capitulo_8_Classes_e_objetos_um_exame_mais_profundo\Figura_8_1_Time1_java\MemberAccessTest.java:14: error: second has private access in Time1
        time.second = 30; // erro: second tem acesso privado em Time1
            ^
3 errors

D:\Google Drive\exercicios_java_como_programar>